- alignment for radio button in instance mode fixed - show/hide issue with all in designer mode fixed

--- a/karuta/css/karuta.less
+++ b/karuta/css/karuta.less
@@ -1342,7 +1342,7 @@ a.active:over{
 .get-radio{
 	font-size:14px;
 }
-.tab-content #edit-window-body-resource .get-radio,
+#edit-window-body-resource .get-radio,
 .edit-inline .get-radio {
 	margin-left:20px;
 }
